Change front button

--- a/MySampled/.gitignore
+++ b/MySampled/.gitignore
@@ -7,7 +7,7 @@
 ...
 
 # règle pour ignorer ApiKey.plist
-
-
+build/XCBuildData/aaabddf0ad9124183b7d3142df4bc648.xcbuilddata
+ApiKey.plist
 # Code Injection
 ...
