--- a/MySampled/Info.plist
+++ b/MySampled/Info.plist
@@ -31,6 +31,7 @@
 	</dict>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>bluetooth-central</string>
 		<string>audio</string>
 	</array>
 </dict>
