--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -10,7 +10,9 @@ trailing_whitespace:
 vertical_whitespace:
   max_empty_lines: 1
 
-
+disabled_rules:
+  - large_tuple
+  
 line_length:
   warning: 200
   error: 250
